--- a/MovieDiary/MovieDiary/Base.lproj/Main.storyboard
+++ b/MovieDiary/MovieDiary/Base.lproj/Main.storyboard
@@ -192,6 +192,7 @@
                     </view>
                     <connections>
                         <outlet property="tableView" destination="FYQ-BU-rOB" id="4Am-0g-H1k"/>
+                        <segue destination="Bjh-3o-FVc" kind="presentation" identifier="segHomeToDetail" modalPresentationStyle="fullScreen" id="plb-Vd-SAr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -382,14 +383,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wave_bg" translatesAutoresizingMaskIntoConstraints="NO" id="1l9-eV-ek7">
-                                <rect key="frame" x="0.0" y="629" width="414" height="247"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="1l9-eV-ek7" secondAttribute="height" multiplier="414:247" id="jRz-E7-Ql8"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ym3-9B-cCN">
-                                <rect key="frame" x="142.5" y="104" width="129" height="47"/>
+                                <rect key="frame" x="143" y="104" width="128.5" height="47"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Movies">
                                         <attributes>
@@ -412,6 +407,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="21" scale="large" weight="bold"/>
                                 </state>
+                                <connections>
+                                    <segue destination="fqo-3O-V4T" kind="unwind" unwindAction="unwindToHomeWithSegue:" id="nUc-LR-i0b"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="u10-qF-MMd">
                                 <rect key="frame" x="60" y="226" width="294" height="56"/>
@@ -426,30 +424,104 @@
                                 </attributedString>
                                 <color key="highlightedColor" cocoaTouchSystemColor="darkTextColor"/>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="8Gb-Su-3bQ">
+                                <rect key="frame" x="75" y="322" width="225" height="39"/>
+                                <subviews>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QAf-2s-Hbv">
+                                        <rect key="frame" x="0.0" y="0.0" width="41" height="39"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="41" id="7iM-ch-vQx"/>
+                                            <constraint firstAttribute="height" constant="39" id="O8k-oc-c2C"/>
+                                        </constraints>
+                                        <state key="normal" backgroundImage="empty_star_colored"/>
+                                    </button>
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z69-q2-ts8">
+                                        <rect key="frame" x="46" y="0.0" width="41" height="39"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="39" id="Ngr-ix-SKG"/>
+                                            <constraint firstAttribute="width" constant="41" id="o8P-q9-LmU"/>
+                                        </constraints>
+                                        <state key="normal" backgroundImage="empty_star_colored"/>
+                                    </button>
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="54z-pe-mTU">
+                                        <rect key="frame" x="92" y="0.0" width="41" height="39"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="41" id="b1e-17-mk6"/>
+                                            <constraint firstAttribute="height" constant="39" id="bwX-We-ixA"/>
+                                        </constraints>
+                                        <state key="normal" backgroundImage="empty_star_colored"/>
+                                    </button>
+                                    <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0yN-B8-1HW">
+                                        <rect key="frame" x="138" y="0.0" width="41" height="39"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="41" id="MYC-Ug-gvr"/>
+                                            <constraint firstAttribute="height" constant="39" id="dt8-E2-Sqd"/>
+                                        </constraints>
+                                        <state key="normal" backgroundImage="empty_star_colored"/>
+                                    </button>
+                                    <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IV8-2c-NOZ">
+                                        <rect key="frame" x="184" y="0.0" width="41" height="39"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="39" id="tLq-ee-HVI"/>
+                                            <constraint firstAttribute="width" constant="41" id="vjh-ec-W20"/>
+                                        </constraints>
+                                        <state key="normal" backgroundImage="empty_star_colored"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="characterWrap" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQX-Ef-nQk">
+                                <rect key="frame" x="75" y="426" width="274" height="210"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. ">
+                                        <attributes>
+                                            <color key="NSColor" red="0.80000000000000004" green="0.16862745098039217" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <font key="NSFont" size="36" name="Montserrat-SemiBoldItalic"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="14" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wave_bg" translatesAutoresizingMaskIntoConstraints="NO" id="1l9-eV-ek7">
+                                <rect key="frame" x="0.0" y="629" width="414" height="247"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="1l9-eV-ek7" secondAttribute="height" multiplier="414:247" id="jRz-E7-Ql8"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="qg9-KA-uZg" firstAttribute="trailing" secondItem="gQX-Ef-nQk" secondAttribute="trailing" constant="65" id="2GN-4L-rpp"/>
+                            <constraint firstAttribute="bottom" secondItem="1l9-eV-ek7" secondAttribute="bottom" constant="20" symbolic="YES" id="2f1-Hb-PbT"/>
+                            <constraint firstItem="qg9-KA-uZg" firstAttribute="trailing" secondItem="8Gb-Su-3bQ" secondAttribute="trailing" constant="114" id="46C-Tu-U7Z"/>
                             <constraint firstItem="qg9-KA-uZg" firstAttribute="trailing" secondItem="1l9-eV-ek7" secondAttribute="trailing" id="5hA-vo-FVg"/>
-                            <constraint firstAttribute="bottom" secondItem="1l9-eV-ek7" secondAttribute="bottom" constant="20" symbolic="YES" id="7w8-ys-RHb"/>
                             <constraint firstItem="8oi-4S-ifX" firstAttribute="top" secondItem="qg9-KA-uZg" secondAttribute="top" constant="71" id="HPR-Eq-hYi"/>
                             <constraint firstItem="8oi-4S-ifX" firstAttribute="leading" secondItem="qg9-KA-uZg" secondAttribute="leading" constant="35" id="KIK-ce-brV"/>
                             <constraint firstItem="Ym3-9B-cCN" firstAttribute="top" secondItem="qg9-KA-uZg" secondAttribute="top" constant="60" id="KNQ-Ss-bKD"/>
                             <constraint firstItem="u10-qF-MMd" firstAttribute="top" secondItem="Ym3-9B-cCN" secondAttribute="bottom" constant="75" id="NzZ-nv-jVg"/>
-                            <constraint firstItem="1l9-eV-ek7" firstAttribute="top" secondItem="8oi-4S-ifX" secondAttribute="bottom" constant="487" id="R7a-Qa-eQQ"/>
-                            <constraint firstItem="Ym3-9B-cCN" firstAttribute="leading" secondItem="8oi-4S-ifX" secondAttribute="trailing" constant="88.5" id="WtZ-Px-elv"/>
+                            <constraint firstItem="gQX-Ef-nQk" firstAttribute="leading" secondItem="qg9-KA-uZg" secondAttribute="leading" constant="75" id="Pb9-C9-NVN"/>
+                            <constraint firstItem="8Gb-Su-3bQ" firstAttribute="leading" secondItem="qg9-KA-uZg" secondAttribute="leading" constant="75" id="etX-vu-fPc"/>
+                            <constraint firstItem="8Gb-Su-3bQ" firstAttribute="top" secondItem="u10-qF-MMd" secondAttribute="bottom" constant="40" id="ewv-rn-H7k"/>
                             <constraint firstItem="qg9-KA-uZg" firstAttribute="trailing" secondItem="u10-qF-MMd" secondAttribute="trailing" constant="60" id="g1k-Ad-NyA"/>
+                            <constraint firstItem="gQX-Ef-nQk" firstAttribute="top" secondItem="8Gb-Su-3bQ" secondAttribute="bottom" constant="65" id="juS-1w-do0"/>
                             <constraint firstItem="u10-qF-MMd" firstAttribute="leading" secondItem="qg9-KA-uZg" secondAttribute="leading" constant="60" id="lYq-uW-c0l"/>
                             <constraint firstItem="1l9-eV-ek7" firstAttribute="leading" secondItem="qg9-KA-uZg" secondAttribute="leading" id="trk-Ju-wOk"/>
-                            <constraint firstItem="qg9-KA-uZg" firstAttribute="trailing" secondItem="Ym3-9B-cCN" secondAttribute="trailing" constant="142.5" id="ykd-CM-NKd"/>
                             <constraint firstItem="Ym3-9B-cCN" firstAttribute="centerX" secondItem="xe9-9k-1Pp" secondAttribute="centerX" id="zEz-yQ-yYW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qg9-KA-uZg"/>
                     </view>
                     <connections>
-                        <outlet property="waveBackground" destination="1l9-eV-ek7" id="QIi-WZ-5lj"/>
+                        <outlet property="commentLabel" destination="gQX-Ef-nQk" id="3ei-kL-xeP"/>
+                        <outlet property="titleLabel" destination="u10-qF-MMd" id="qj3-Az-eLa"/>
+                        <outletCollection property="ratingStars" destination="QAf-2s-Hbv" collectionClass="NSMutableArray" id="QQm-r9-h0n"/>
+                        <outletCollection property="ratingStars" destination="z69-q2-ts8" collectionClass="NSMutableArray" id="0s4-eu-0He"/>
+                        <outletCollection property="ratingStars" destination="54z-pe-mTU" collectionClass="NSMutableArray" id="MPR-hi-T1S"/>
+                        <outletCollection property="ratingStars" destination="0yN-B8-1HW" collectionClass="NSMutableArray" id="XKj-HV-FyF"/>
+                        <outletCollection property="ratingStars" destination="IV8-2c-NOZ" collectionClass="NSMutableArray" id="UTY-7V-qWA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DK2-Bs-6YY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="fqo-3O-V4T" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="973.91304347826099" y="112.5"/>
         </scene>
